[package]
name = "pgrx-named-columns"
version = "0.2.0"
authors = ["Edgar Onghena <dev@edgar.bzh>"]
license = "MIT OR Apache-2.0"
description = "Declare reusable pgrx rows using a structure instead of a tuple with the name!() decl-macro"
repository = "https://github.com/edgarogh/pgrx-named-columns/"
keywords = ["pgrx", "postgresql"]
categories = ["database"]
edition = "2021"

[lib]
doctest = false
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["clone-impls", "full", "parsing", "printing", "proc-macro"], default-features = false }

[dev-dependencies]
pgrx = { version = "0.13.1", features = ["pg14"] }
